<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="InvoerEnUitvoer" Id="{50253b7d-fc8b-4a12-9fbd-309ed75f9929}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM InvoerEnUitvoer
VAR

	StartUitvoer: BOOL;
	SensorUitvoer: Bool;
	MotorUitvoer: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF gvl.Power = TRUE THEN
		
	IF GVL.Initialisatie_voltooid = FALSE THEN
		Initialiseren();
	END_IF	
	
	IF GVL.Initialisatie_voltooid= TRUE AND GVL.startAanvoer =FALSE THEN 
			
			GVL.Status:= 'Voer de zaag lengte in';
			
	END_IF	

	IF GVL.ZaagLengte >= 0 AND GVL.StartAanvoer = TRUE THEN
		Simulatie_invoer();
		GVL.ZagenKlaar:=FALSE;
		sensorUitvoer := FALSE;
	END_IF
	
		
	IF GVL.ZaagLengte = GVL.HuidigePositieAanvoer AND motoruitvoer = FALSE AND gvl.ZagenKlaar = FALSE AND gvl.ZaagLengte >0 THEN
		gvl.AanvoerInPositie :=TRUE;
		GVL.StartAanvoer:=FALSE;
		gvl.MotorInvoer:=false;
		GVL.Status:= 'Aanvoer in positie druk op: start zagen';
	END_IF
	
	
	IF GVL.ZagenKlaar THEN
		gvl.Status := 'Uitvoer actief';
		MotorUitvoer := TRUE;
	END_IF
	
	IF SensorUitvoer = TRUE AND gvl.ZagenKlaar THEN
		GVL.Status := 'Voer de zaaglengte in';
		MotorUitvoer := FALSE;
	END_IF
	
	
	
ELSE
	Gvl.MotorInvoer := FALSE;
	GVL.motoruitvoer := FALSE;
	
END_IF]]></ST>
    </Implementation>
    <LineIds Name="InvoerEnUitvoer">
      <LineId Id="89" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="119" Count="1" />
      <LineId Id="118" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="178" Count="0" />
      <LineId Id="102" Count="0" />
      <LineId Id="173" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="105" Count="2" />
      <LineId Id="174" Count="0" />
      <LineId Id="179" Count="0" />
      <LineId Id="108" Count="0" />
      <LineId Id="170" Count="0" />
      <LineId Id="109" Count="3" />
      <LineId Id="187" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="162" Count="0" />
      <LineId Id="136" Count="1" />
      <LineId Id="142" Count="0" />
      <LineId Id="138" Count="1" />
      <LineId Id="144" Count="1" />
      <LineId Id="149" Count="0" />
      <LineId Id="176" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="166" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="150" Count="1" />
      <LineId Id="153" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>