<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Simulatie_invoer" Id="{371512e1-b4c3-4157-99ae-e3d8e8edb7d8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Simulatie_invoer : BOOL
VAR_INPUT
END_VAR
VAR
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF gvl.Power = TRUE THEN
	

	IF GVL.ZaagLengte <= GVL.HuidigePositieAanvoer THEN
		Gvl.MotorInvoer:= TRUE;	
		GVL.HuidigePositieAanvoer := GVL.HuidigePositieAanvoer - 1;
	END_IF;
				
				
	IF GVL.ZaagLengte > GVL.HuidigePositieAanvoer THEN
		Gvl.MotorInvoer:= TRUE;		
		GVL.HuidigePositieAanvoer := GVL.HuidigePositieAanvoer + 1;
	END_IF;
	
	IF GVL.ZaagLengte = GVL.HuidigePositieAanvoer THEN
		GVL.MotorInvoer:=FALSE;
	END_IF
	
ELSE
	Gvl.MotorInvoer:=FALSE;
END_IF
	

]]></ST>
    </Implementation>
    <LineIds Name="Simulatie_invoer">
      <LineId Id="38" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="13" Count="2" />
      <LineId Id="33" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="89" Count="2" />
      <LineId Id="93" Count="0" />
      <LineId Id="69" Count="3" />
      <LineId Id="40" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>